--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,6 +14,4 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: build
-      run: 
-        g++ --version
-        make clean all test
+      run: make clean all test
