--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -12,6 +12,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    
+    - name: Set up GCC
+      uses: egor-tensin/setup-gcc@v1
+      with:
+        version: latest
+        platform: x64
     - name: build
       run: make clean all test
