--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -7,15 +7,46 @@ on:
     branches: [ "trunk" ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up GCC
-      uses: egor-tensin/setup-gcc@v1
-      with:
-        version: latest
-        platform: x64
     - name: build
       run: make clean all test
+
+  windows:
+    runs-on: windows-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: build
+      run: make all
+    - uses: actions/upload-artifact@v3.2.1-node20
+      with:
+        name: windows
+        path: lib/simply.exe
+
+  macos:
+      runs-on: macos-latest
+  
+      steps:
+      - uses: actions/checkout@v4
+      - name: build
+        run: make all
+      - uses: actions/upload-artifact@v3.2.1-node20
+        with:
+          name: macos
+          path: lib/simply
+
+  linux:
+      runs-on: ubuntu-latest
+  
+      steps:
+      - uses: actions/checkout@v4
+      - name: build
+        run: make all
+      - uses: actions/upload-artifact@v3.2.1-node20
+        with:
+          name: linux
+          path: lib/simply
